[gd_scene load_steps=4 format=3 uid="uid://bjsmhasptlwxr"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_f0txa"]
[ext_resource type="AudioStream" uid="uid://yox6h1qc3ec8" path="res://assets/sound/hud/MP3_Button Clicks & Beeps_15.mp3" id="2_afjht"]
[ext_resource type="AudioStream" uid="uid://k4crmxfxfc65" path="res://assets/sound/hud/MP3_Button Clicks & Beeps_21.mp3" id="3_4lnti"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1158.0
offset_bottom = 650.0
script = ExtResource("1_f0txa")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1158.0
offset_bottom = 650.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1147.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SFX Volume
"

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_top = 607.0
offset_right = 1156.0
offset_bottom = 650.0
text = "Back"

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_afjht")
volume_db = -10.0
pitch_scale = 3.05

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4lnti")
volume_db = -10.0
pitch_scale = 2.03

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
